--- a/app/index.html
+++ b/app/index.html
@@ -26,6 +26,8 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+    <script src="js/login.js"></script>
   </head>
 
   <body>
@@ -88,9 +90,9 @@
 
       <div class="card card-signin">
         <img class="img-circle profile-img" src="img/avatar.png" alt="">
-        <form class="form-signin">
-          <label for="inputEmail" class="sr-only">Email address</label>
-          <input type="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
+        <form class="form-signin" onsubmit="sendRequest()">
+          <label for="inputLogin" class="sr-only">Login</label>
+          <input type="login" id="inputLogin" class="form-control" placeholder="Login" required autofocus>
           <label for="inputPassword" class="sr-only">Password</label>
           <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
           <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
